--- a/angular.json
+++ b/angular.json
@@ -1,4 +1,5 @@
 {
+cambio1 : 1,
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
